Signed-off-by: XuanhengTang <491536033@qq.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,22 +2,30 @@
     <string name="app_name">中南智充</string>
     <string name="account_name">账号：</string>
     <string name="balance">余额：</string>
-    <string name="mail">绑定的邮箱：</string>
-    <string name="refresh">刷新</string>
+    <string name="mail">管理员身份：</string>
+    <string name="refresh">查询</string>
     <string name="login">登录</string>
     <string name="logout">注销</string>
     <string name="register">注册</string>
     <string name="dash">仪表板</string>
-    <string name="capacity">电池电量：</string>
+    <string name="rul">电池阀寿命：</string>
     <string name="needCharge">我要充电</string>
-    <string name="charging">正在充电</string>
+    <string name="charging">正在监控</string>
     <string name="password">密码：</string>
     <string name="regist">注册</string>
     <string name="welcome">登录以使用更多功能</string>
     <string name="joinUs">欢迎加入我们</string>
     <string name="passwordConfirm">确认密码：</string>
     <string name="backToLogin">返回登录</string>
-    <string name="current">当前电流</string>
-    <string name="voltage">当前电压</string>
+    <string name="reflactTime">当前反应时间</string>
+    <string name="stableCurrent">当前稳定电流</string>
     <string name="unCharging">未在充电</string>
+    <string name="BCUcount">当前接入系统数量</string>
+    <string name="list">系统列表</string>
+    <string name="startMoni">开始监控</string>
+    <string name="YV258">充风阀258YV</string>
+    <string name="YV263">排风阀263YV</string>
+    <string name="YV257">保护阀257YV</string>
+    <string name="loginReq">登陆后进行监控</string>
+    <string name="curmoni">当前监控：</string>
 </resources>
